# sqlpp11-connector-mysql

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  README.md  pre-push  tag-release.sh
cmake/: FindMySQL.cmake  FindMySql.cmake  sqlpp11-connector-mysqlConfig.cmake
dependencies/: CMakeLists.txt
dependencies/date/: CMakeLists.txt
dependencies/sqlpp11/: CMakeLists.txt
include/sqlpp11/mysql/: bind_result.h  char_result.h  char_result_row.h  connection.h  connection_config.h  interpreter.h  mysql.h  prepared_query.h  prepared_statement.h  remove.h  result.h  serializer.h  update.h
src/: CMakeLists.txt  bind_result.cpp  char_result.cpp  connection.cpp  prepared_query.cpp  prepared_statement.cpp  result.cpp
src/detail/: connection_handle.cpp  connection_handle.h  prepared_query_handle.h  prepared_statement_handle.h  result_handle.h
test-install/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  DateTimeTest.cpp  DynamicSelectTest.cpp  JsonTest.cpp  MoveConstructorTest.cpp  PreparedTest.cpp  RemoveTest.cpp  SampleTest.cpp  SelectTest.cpp  TabSample.h  TruncatedTest.cpp  UnionTest.cpp  UpdateTest.cpp
