macro (build_and_run arg)
	# Add headers to sources to enable file browsing in IDEs
	add_executable(Sqlpp11MySQL${arg} ${arg}.cpp ${sqlpp_headers})
	target_link_libraries(Sqlpp11MySQL${arg} sqlpp-mysql)
	target_link_libraries(Sqlpp11MySQL${arg} Threads::Threads)
	if (APPLE)
		target_link_libraries(Sqlpp11MySQL${arg} "${Boost_LIBRARIES}")
	endif ()
	target_link_libraries(Sqlpp11MySQL${arg} "${MYSQL_LIBRARIES}")
	if (NOT MSVC)
		target_compile_options(Sqlpp11MySQL${arg} INTERFACE -Wall -Wextra -pedantic)
	endif ()
	add_test(${arg} Sqlpp11MySQL${arg})
endmacro ()

build_and_run(DateTimeTest)
build_and_run(SampleTest)
build_and_run(SelectTest)
build_and_run(UnionTest)
build_and_run(DynamicSelectTest)
build_and_run(MoveConstructorTest)
build_and_run(PreparedTest)
build_and_run(TruncatedTest)